fix: dl alignment, tabs colors

--- a/assets/src/bundles/app/css/themes/soft/manon/manon-variables.scss
+++ b/assets/src/bundles/app/css/themes/soft/manon/manon-variables.scss
@@ -17,55 +17,17 @@
 @import "button-icon"; /* Icon button */
 @import "button-ghost"; /* Ghost button */
 @import "breadcrumb-bar";
+@import "tabs";
 
 :root {
-  --accordion-button-icon-after-open-content: "\ea5f";
-  --accordion-button-icon-after-close-content: "\ea62";
-  --accordion-content-gap: 1.5rem;
-  --accordion-content-text-color: #000;
   --critical-informational-labels-min-width: 8rem;
   --de-emphasized-text-color: #000;
-  --filter-intro-text-color: var(--application-base-text-color);
-  --filter-button-icon-before-open-content: "\ea5f";
-  --filter-button-icon-before-close-content: "\ea62";
-  --form-base-input-text-color: #000;
-  --form-help-button-icon-content: "\ec9d";
-  --form-help-button-icon-font-family: var(--icon-base-font-family);
-  --form-input-border-width: 1px;
-  --form-input-border-style: solid;
-  --form-input-border-color: #ccc;
-  --form-textarea-text-color: var(--form-base-input-text-color);
-  --form-textarea-border-color: #ccc;
-  --form-fieldset-legend-font-weight: 600;
   --h1-font-size: var(--heading-xl-font-size);
   --h2-font-size: var(--heading-large-font-size);
   --icon-base-font-family: "tabler-icons";
   --icon-base-font-size: 1.2rem;
-  --layout-block-gap: 3rem;
-  --layout-base-max-width: 80rem;
-  --layout-base-content-block-gap: 1.5rem;
-  --layout-base-main-padding-top: 5rem;
-  --layout-footer-content-block-gap: var(--layout-block-gap);
-  --layout-footer-block-max-width: var(--layout-base-max-width);
-  --layout-footer-content-block-gap: var(--layout-base-content-block-gap);
-  --layout-header-gap: 0;
-  --layout-header-padding-top: var(--layout-base-padding-top);
-  --layout-header-padding-bottom: var(--layout-base-padding-bottom);
-  --layout-header-padding-left: var(--layout-base-padding-left);
-  --layout-header-block-max-width: var(--layout-base-max-width);
-  --layout-main-gap: var(--layout-block-gap);
-  --layout-main-first-padding-top: 5rem;
-  --login-meta-background-color: #eaeaea;
-  --login-meta-color: #000;
   --nota-bene-text-color: #000;
   --section-gap: 1.5rem;
   --section-title-margin: var(--layout-base-content-block-title-margin);
   --section-subtitle-margin: var(--layout-base-content-block-subtitle-margin);
-  --table-action-buttons-button-font-size: var(--icon-base-font-size);
-  --table-base-cells-padding: 0.25rem 1rem;
-  --table-base-background-color: #fff;
-  --table-base-text-color: var(--application-base-text-color);
-  --table-base-foot-background-color: #f5f5f5;
-  --table-base-body-head-cell-background-color: var(  --application-base-accent-color);
-  --tile-background-color: #fff;
 }
